
name:                drifter
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              AndrewRademacher
maintainer:          andrewrademacher@gmail.com
-- copyright:           
category:            Database
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
    hs-source-dirs:     src
    default-language:   Haskell2010

    build-depends:      base                >=4.7   && <4.8
                    ,   postgresql-simple   >=0.4   && <0.5
                    ,   bytestring          >=0.10  && <0.11
                    ,   time                >=1.4   && <1.5
                    ,   text                >=1.2   && <1.3

    exposed-modules:    Drifter.PostgreSQL
                    ,   Drifter.Types
