
name:                drifter
version:             0.1.0.1
synopsis:            Simple schema management for arbitrary databases.
description:         Simple support for migrating database schemas, which allows
                     haskell functions to be run as a part of the migration.
license:             MIT
license-file:        LICENSE
author:              AndrewRademacher
maintainer:          andrewrademacher@gmail.com
category:            Database
build-type:          Simple
cabal-version:       >=1.10
homepage:            https://github.com/AndrewRademacher/drifter

source-repository head
    type:     git
    location: git@github.com:AndrewRademacher/drifter.git

library
    hs-source-dirs:     src
    default-language:   Haskell2010

    build-depends:      base                >=4.6   && <4.8
                    ,   fgl                 >=5.5   && <5.6
                    ,   containers          >=0.5   && <0.6
                    ,   text                >=0.11   && <1.3

    exposed-modules:    Drifter.Graph
                    ,   Drifter.Types
